- ADD: When Germinate configuration is invalid, return information about which parts are not correct. - FIX: Fixed endpoints for certain images. - FIX: Fixed carousel image endpoints. -